 * Simplified caching (using cachestamp in filename)
 * Added preview='dom_id' to [form]. (Use preview_node to show preview content.) <== TODO: Document
 * Added "in_group" zafu method on visitor. <== TODO: Document

* Minor changes
 * Support for 'lang_list' when creating vhost file <== TODO: Document
 * Support for Range in zafu. <== TODO: Document

== 1.2.2 2012-08-30

* Major changes
 * Basic zjs to batch create/update nodes (with grid.js).
 * Zafu is not a separate gem anymore.
 * Added simple support for JS Tags (used to define grid colums).
 * Enabled rebuilding of templates on partial query.
 * Enabled 'hash' property type.
 * Enabled javascript on toggle.
 * Enabled "fs_skin" brick to use zafu stored in brick file system.
 * No need to use '&gt;' or '&lt;' in html params. \' escape works. Yeah !!
 * Enabled "static" assets with symlink to skins in fs_skin bricks (/static/[brick]-[skin]/xxx.css => bricks/[brick]/skins/[skin]/static/xxx.css)
 * No more strict scoping: "set" variables are rewritten if type matches.
 * Added support for new in rubyless (Post.new, Post.new(:title => 'foo')).
 * Added support for type in custom queries and SQLiss select "nodes select created_at as ti:time"

* Minor changes
 * Fixed label traduction for param.
 * Enable ajax response on Node destroy (use dummy update parameter).
 * Added 'sum' method on array. <===== TODO: Document
 * Added 'loading' option to [filter].
 * Added 'master_template' zafu method to access the master template used for compilation.
 * Fixed creation of modules bug.
 * Using latest QueryBuilder (fixes default scope bug).
 * Added 'ssl_on_auth' option to force https after (and during) login. <=== TODO: Document
 * Removing evaluated strings if copy_id is blank.
 * Exporting relations by class name instead of kpath (may differ from site to site).
 * Using any character to build kpath if no character from the class name can be used.